# RustMinidb

./: .gitignore  Cargo.toml  README.md  release_body.json
examples/: quickstart.rs  stress_test.rs
src/: banner.rs  config.rs  error.rs  lib.rs  main.rs  migration.rs  monitor.rs  watcher.rs
src/cli/: commands.rs  mod.rs
src/server/: admin.html  auth.rs  error.rs  handlers.rs  metrics.rs  mod.rs  routes.rs
src/sql/: executor.rs  mod.rs  parser.rs  planner.rs  types.rs
src/storage/: encoding.rs  engine.rs  mod.rs  redb_engine.rs  schema.rs
tests/: api_tests.rs  unit_tests.rs
